--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,23 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+body{
+  background-image: url("/public/bg.jpg");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: white;
+
+}
+
+.container{
+  width:90vw ;
+  height: 90vh;
+  background-color: rgba(35, 35, 42, 0.871);
+  backdrop-filter: blur(19px) saturate(180%);
+  border-radius: 12px;
+  border: 1px solid rgba(0, 0, 0, 0.871);
+  
+}
