--- a/src/components/list/userInfo/userinfo.css
+++ b/src/components/list/userInfo/userinfo.css
@@ -3,5 +3,46 @@
     align-items: center;
     display: flex;
     padding: 20px;
-    justify-content: space-between;
-}
+    align-items: center;
+    justify-content: space-between;  
+
+
+    .user{
+        display: flex;
+        align-items: center;
+        gap:40px;
+    
+        img{
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    
+    }
+
+    .icon{
+        display: flex;
+        gap: 20px;
+        padding-left: 50px;
+
+        img{
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+    }
+
+    
+    }
+
+    
+        
+    
+
+
+
+
+
+
+
