--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -2,4 +2,59 @@
     flex: 2;
     border-bottom: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
+    height: 100%;
+
+.top{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dddddd35;
+
+    .user{
+         display: flex;
+         align-items: center;
+         gap: 20px;
+
+     
+     img{
+         width: 60px;
+         height: 60px;
+         border-radius: 50%;
+         object-fit: cover;
+
+
 }
+     .texts{
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+
+       span{
+          font-size: 18px;
+          font-weight: bold;
+          
+       }
+       p{
+          font-size: 14px;
+          font-weight: 300;
+          color: #797676;
+       }
+     }
+}
+         .icons{
+              display: flex;
+              gap: 20px;
+              cursor: pointer;
+ 
+              img{
+
+                  width: 20px;
+                  height: 20px;
+              }
+         }
+
+}
+
+}
+
