--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -3,6 +3,10 @@
     border-bottom: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
     height: 100%;
+    display: flex;
+
+
+    flex-direction: column;
 
 .top{
     padding: 20px;
@@ -55,6 +59,77 @@
          }
 
 }
+ .center{
+    padding: 20px;
+    flex:1;
+ }
+ .bottom{
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-top: 1px solid #dddddd35;
+      gap: 20px;
+      margin-top: auto;
+
+      .icons{
+          display: flex;
+          gap: 20px;
+          cursor: pointer;
+ 
+      }
+      
+      img{
+
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+      input{
+        flex: 1;
+        background-color: transparent;
+        bottom: none;
+        border: none;
+        outline: none;
+        color: white;
+        font-size: 16px;
+        padding: 20px;
+        border-radius: 20px;
+        border: 1px solid #dddddd35;
+        
+        margin-left: 20px;
+        
+      }
+
+    .emoji{
+        position: relative;
+        display: flex;
+          align-items: center;
+          cursor: pointer;
+
+        .picker{
+             position: absolute;
+             bottom: 50px;
+             left:0;
+
+        }
+    }
+      .Sendbottom{
+
+          background-color: #0077cc;
+          color: white;
+          font-size: 16px;
+          padding: 10px 20px;
+          border-radius: 10px;
+          border: none;
+          cursor: pointer;
+          margin-right: 20px;
+          margin-left: 10px;    
+          cursor: pointer;
+
+      }
+
+ }
 
 }
 
