--- a/src/components/list/chatlist/chatlist.css
+++ b/src/components/list/chatlist/chatlist.css
@@ -1,6 +1,9 @@
 .chatlist{
   flex:1;
   overflow: scroll ;
+  scrollbar-width: none; /* Remove scrollbar space */
+  border-right: 1px solid #dddddd35;
+
 
 
 .search{
