--- a/src/components/list/userInfo/userinfo.css
+++ b/src/components/list/userInfo/userinfo.css
@@ -4,7 +4,9 @@
     display: flex;
     padding: 20px;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
+    border-right: 1px solid #dddddd35;
+ 
 
 
     .user{
